apps/battalion-team/battalion-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: BATTALION_NAME
  name: BATTALION_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battalion
  strategy: {}
  template:
    metadata:
      labels:
        app: BATTALION_NAME
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: BATTALION_NAME
        resources: {}
---
