apps/battalion-team/battalion-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: BATTALION_NAME
  name: BATTALION_NAME
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: BATTALION_NAME
---
