apps/battalion-team/battalion-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: BATTALION_NAME
  name: BATTALION_NAME
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: BATTALION_NAME
    weight: 100
